--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,3 +1,4 @@
+name: build image
 on: 
   push: 
     tags:
@@ -7,15 +8,7 @@ jobs:
   # Job for building the image
   build-image:
     runs-on: ubuntu-18.04
-    needs: get-artifact-list
-    env:
-      buildstr: "install_image"
     steps:
-      - uses: actions/checkout@v1
-      - name: get-artifact-list
-        uses: actions/download-artifact@master
-        with:
-          name: artifact-list
       - name: build-image
         run: |
          git clone https://github.com/kata-containers/packaging.git
