--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           go-version: '1.9.3' # The Go version to download (if necessary) and use.
       - name: build-image 
-        run: |   
+      - run: |   
           git clone "$osbuilder_url" "osbuilder"
           go get github.com/kata-containers/agent
           push ${GOPATH}/src/github.com/kata-containers/agent
