--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,14 +9,16 @@ jobs:
   build-image:
     runs-on: ubuntu-18.04
     env:
-      GOPATH: "${HOME}"
       osbuilder_url: "https://github.com/kata-containers/osbuilder.git"
     steps:
       - name: Setup go
         uses: actions/setup-go@v1
         with:
           go-version: '1.12.3'
-      - run: |   
+      - run: |
+          echo "GOPATH=$GOPATH"
+          export GOPATH=$HOME
+          echo "GOPATH=$GOPATH"
           git clone "$osbuilder_url" "osbuilder"
           go get github.com/kata-containers/agent
           push ${GOPATH}/src/github.com/kata-containers/agent
