--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,7 +23,8 @@ jobs:
           export PATH=$GOPATH/bin:$PATH
           echo "GOPATH=$GOPATH"
           mkdir -p $GOPATH/bin
-          curl -o /home/runner/go/bin/yq -LSsf https://github.com/mikefarah/yq/releases/download/2.3.0/yq_linux_amd64
+          curl -o $GOPATH/bin/yq -LSsf https://github.com/mikefarah/yq/releases/download/2.3.0/yq_linux_amd64
+          chmod +x $GOPATH/bin/yq
           git clone "$osbuilder_url" "osbuilder"
           go get github.com/kata-containers/agent
           pushd ${GOPATH}/src/github.com/kata-containers/agent
