--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,12 +19,14 @@ jobs:
           go-version: '1.12.3'
       - name: Set GOPATH
         run: |
-          export GOPATH="${GITHUB_WORKSPACE}/go"
-          echo "##[set-env name=GOPATH;]$(dirname $GOPATH)"
-          echo "##[add-path]$(dirname $GITHUB_WORKSPACE)/bin"
+          export GOPATH="${HOME}/go"
+          echo "##[set-env name=GOPATH;]${GOPATH}"
+          echo "##[add-path]${GOPATH}/bin"
           mkdir -p "${GOPATH}/bin"
       - name: Install yq
         run: |
+          ls -la "${GOPATH}"
+          ls -la "${GOPATH}"*
           curl -o "${GOPATH}/bin/yq" -LSsf https://github.com/mikefarah/yq/releases/download/2.3.0/yq_linux_amd64
           chmod +x "$GOPATH/bin/yq"
       - name: install hub
