--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,8 +25,6 @@ jobs:
           mkdir -p "${GOPATH}/bin"
       - name: Install yq
         run: |
-          ls -la "${GOPATH}"
-          ls -la "${GOPATH}"*
           curl -o "${GOPATH}/bin/yq" -LSsf https://github.com/mikefarah/yq/releases/download/2.3.0/yq_linux_amd64
           chmod +x "$GOPATH/bin/yq"
       - name: install hub
@@ -36,13 +34,15 @@ jobs:
           tar xz --strip-components=2 --wildcards '*/bin/hub' && sudo mv hub /usr/local/bin/hub
       - name: checkout to agent version
         run: |
-          go get "${agent_repo}"
+          set -x
+          go get "${agent_repo}" || true
           pushd "${GOPATH}/src/${agent_repo}"
           git fetch origin :TARGET
           git checkout TARGET
           popd
       - name: checkout to agent version
         run: |
+          set -x
           go get "${osbuilder_repo}"
           pushd "${GOPATH}/src/${osbuilder_repo}"
           sudo -E PATH="${PATH}" make image DISTRO="clearlinux" DEBUG="1" USE_DOCKER="1" ROOTFS_BUILD_DEST="/tmp/rootfs-image" GO_VERSION=1.12.3
